// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
.c0 {
  background: lightgrey;
}

.c1 {
  max-width: 96rem;
  margin: 0 auto;
  padding: 1rem;
}

@media (min-width:1050px) {
  .c0 {
    background: lightgrey;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      style="margin: 0px;"
    >
      <a
        href="/"
        style="color: grey; text-decoration: none;"
      />
    </h1>
  </div>
</div>
`;

exports[`Header renders correctly with dark theme 1`] = `
.c0 {
  background: black;
}

.c1 {
  max-width: 96rem;
  margin: 0 auto;
  padding: 1rem;
}

@media (min-width:1050px) {
  .c0 {
    background: black;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      style="margin: 0px;"
    >
      <a
        href="/"
        style="color: grey; text-decoration: none;"
      >
        Dark Theme
      </a>
    </h1>
  </div>
</div>
`;

exports[`Header renders correctly with prop siteTitle 1`] = `
.c0 {
  background: lightgrey;
}

.c1 {
  max-width: 96rem;
  margin: 0 auto;
  padding: 1rem;
}

@media (min-width:1050px) {
  .c0 {
    background: lightgrey;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1
      style="margin: 0px;"
    >
      <a
        href="/"
        style="color: grey; text-decoration: none;"
      >
        I am the title of the site
      </a>
    </h1>
  </div>
</div>
`;
